// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should cooorectly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`should cooorectly render ExpensesSummary with mutiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $415,521.44
  </h1>
</div>
`;
